[package]
name = "rlb"
version = "0.1.0"
authors = ["Andrea <a.g.baldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
tokio = { version = "0.2.22", features = ["full"] }
